fix(#268): Addresses overflow-x for smaller screens

--- a/packages/hawtio/src/plugins/camel/CamelContent.css
+++ b/packages/hawtio/src/plugins/camel/CamelContent.css
@@ -1,5 +1,9 @@
 #camel-content-main > article {
-  overflow: inherit;
+  overflow-y: inherit;
+}
+
+#camel-content-main .pf-c-page__main {
+  overflow-x: auto;
 }
 
 #camel-content-header > #camel-contexts-toolbar {
